--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@
 
     <script>
         // ⚠️ IMPORTANTE: CONFIGURE A URL DO SEU WEBHOOK N8N AQUI ⚠️
-        const N8N_WEBHOOK_URL = 'https://SEU-N8N.com/webhook/ananda-therapy-form';
+        const N8N_WEBHOOK_URL = 'https://n8n.mbam.com.br/form/d1c711c1-e978-49e4-be3e-654870ffb163';
         // Substitua 'https://SEU-N8N.com/webhook/ananda-therapy-form' pela URL real do seu n8n
         
         document.getElementById('anamneseForm').addEventListener('submit', async function(e) {
