Change webhook URL to test environment

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       const data = Object.fromEntries(new FormData(form));
 
       try {
-        const response = await fetch("https://n8n.mbam.com.br/webhook/ananda-form", {
+        const response = await fetch("https://n8n.mbam.com.br/webhook-test/ananda-form", {
           method: "POST",
           headers: {
             "Content-Type": "application/json",
