--- a/index.html
+++ b/index.html
@@ -3,22 +3,26 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Formulário Ananda Therapy</title>
+  <title>Ananda Therapy Formulário</title>
   <style>
-    body { font-family: Arial, sans-serif; margin: 2rem; }
-    form { max-width: 400px; margin: auto; }
-    input, textarea, button { width: 100%; margin-bottom: 1rem; padding: 0.5rem; }
-    #status { margin-top: 1rem; font-weight: bold; }
+    body { font-family: Arial, sans-serif; padding: 2rem; background: #f0f0f0; }
+    form { max-width: 500px; margin: auto; background: #fff; padding: 2rem; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
+    input, textarea, button { width: 100%; margin-bottom: 1rem; padding: 0.5rem; font-size: 1rem; }
+    button { background-color: #0078d4; color: white; border: none; cursor: pointer; border-radius: 4px; }
+    button:hover { background-color: #005fa3; }
+    #status { text-align: center; font-weight: bold; margin-top: 1rem; }
   </style>
 </head>
 <body>
-  <h1>Formulário Ananda Therapy</h1>
+
+  <h1 style="text-align:center;">Formulário Ananda Therapy</h1>
+
   <form id="anandaForm">
     <label>Nome:</label>
-    <input type="text" name="nome" required />
+    <input type="text" name="nome" required>
 
     <label>Email:</label>
-    <input type="email" name="email" required />
+    <input type="email" name="email" required>
 
     <label>Mensagem:</label>
     <textarea name="mensagem" required></textarea>
@@ -32,6 +36,9 @@
     const form = document.getElementById('anandaForm');
     const status = document.getElementById('status');
 
+    const WEBHOOK_URL = "https://n8n.mbam.com.br/webhook-test/ananda-form";
+    const WEBHOOK_SECRET = "SEU_SEGREDO_AQUI"; // coloque seu segredo se tiver configurado no n8n
+
     form.addEventListener('submit', async (e) => {
       e.preventDefault();
       status.textContent = "Enviando...";
@@ -39,26 +46,31 @@
       const data = Object.fromEntries(new FormData(form));
 
       try {
-        const response = await fetch("https://n8n.mbam.com.br/webhook-test/ananda-form", {
+        const response = await fetch(WEBHOOK_URL, {
           method: "POST",
           headers: {
             "Content-Type": "application/json",
-            // "X-Webhook-Secret": "SEU_SEGREDO_AQUI" // se você tiver configurado no n8n
+            ...(WEBHOOK_SECRET && { "X-Webhook-Secret": WEBHOOK_SECRET })
           },
           body: JSON.stringify(data)
         });
 
         if (response.ok) {
-          status.textContent = "Enviado com sucesso! ✅";
+          status.style.color = "green";
+          status.textContent = "Formulário enviado com sucesso! ✅";
           form.reset();
         } else {
           const err = await response.json().catch(() => ({}));
+          status.style.color = "red";
           status.textContent = `Erro ao enviar: ${err.message || response.statusText}`;
         }
+
       } catch (error) {
+        status.style.color = "red";
         status.textContent = `Erro de rede: ${error.message}`;
       }
     });
   </script>
+
 </body>
 </html>
