--- a/index.html
+++ b/index.html
@@ -421,10 +421,10 @@
                     <img src="549614398_17867250090446749_3385122234879456627_n.jpg" alt="Ambiente relaxante com velas e óleos">
                 </div>
                 <div class="galeria-item">
-                    <img src="527765955_17862218625446749_5376192582098438339_n" alt="Mesa de atendimento com cristais">
+                    <img src="527765955_17862218625446749_5376192582098438339_n.jpg" alt="Mesa de atendimento com cristais">
                 </div>
                 <div class="galeria-item">
-                    <img src="550486665_17867565093446749_4469943290386357345_n" alt="Ritual com água">
+                    <img src="550486665_17867565093446749_4469943290386357345_n.jpg" alt="Ritual com água">
                 </div>
             </div>
         </div>
