Update logo image source in index.html

--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
     <section class="hero">
         <div class="logo-container">
             <!-- Substitua "logo-ananda.png" pelo nome do arquivo da sua logo -->
-            <img src="logotipo-ananda.png" alt="Ananda Therapy Logo" style="width: 100%; max-width: 300px; height: auto; display: block; margin: 0 auto;">
+            <img src="logo.png" alt="Ananda Therapy Logo" style="width: 100%; max-width: 300px; height: auto; display: block; margin: 0 auto;">
         </div>
         <div class="hero-content">
             <p class="hero-subtitle">Cada corpo é único. Cada resultado, também.</p>
