Update logo and image sources in index.html

--- a/index.html
+++ b/index.html
@@ -397,11 +397,11 @@
     <section class="hero">
         <div class="logo-container">
             <!-- Substitua "logo-ananda.png" pelo nome do arquivo da sua logo -->
-            <img src="logo.png" alt="Ananda Therapy Logo" style="width: 100%; max-width: 300px; height: auto; display: block; margin: 0 auto;">
+            <img src="logo-ananda.png" alt="Ananda Therapy Logo" style="width: 100%; max-width: 300px; height: auto; display: block; margin: 0 auto;">
         </div>
         <div class="hero-content">
             <p class="hero-subtitle">Cada corpo é único. Cada resultado, também.</p>
-            <a href="#conhecer" class="cta-button">Agende sua Sessão</a>
+            <a href="form.html" class="cta-button">Agende sua Sessão</a>
         </div>
     </section>
 
@@ -418,13 +418,13 @@
             <div class="galeria-grid">
                 <!-- Substitua os src abaixo pelas suas imagens -->
                 <div class="galeria-item">
-                    <img src="549614398_17867250090446749_3385122234879456627_n.jpg" alt="Ambiente relaxante com velas e óleos">
+                    <img src="imagem7.jpg" alt="Ambiente relaxante com velas e óleos">
                 </div>
                 <div class="galeria-item">
-                    <img src="527765955_17862218625446749_5376192582098438339_n.jpg" alt="Mesa de atendimento com cristais">
+                    <img src="imagem8.jpg" alt="Mesa de atendimento com cristais">
                 </div>
                 <div class="galeria-item">
-                    <img src="550486665_17867565093446749_4469943290386357345_n.jpg" alt="Ritual com água">
+                    <img src="imagem9.jpg" alt="Ritual com água">
                 </div>
             </div>
         </div>
