--- a/index.html
+++ b/index.html
@@ -396,12 +396,12 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="logo-container">
-            <!-- Substitua "logo-ananda.png" pelo nome do arquivo da sua logo -->
-            <img src="logo-ananda.png" alt="Ananda Therapy Logo" style="width: 100%; max-width: 300px; height: auto; display: block; margin: 0 auto;">
+            <!-- Logo Ananda Therapy -->
+            <img src="logo.png" alt="Ananda Therapy Logo" style="width: 100%; max-width: 300px; height: auto; display: block; margin: 0 auto;">
         </div>
         <div class="hero-content">
             <p class="hero-subtitle">Cada corpo é único. Cada resultado, também.</p>
-            <a href="https://n8n.mbam.com.br/form/d1c711c1-e978-49e4-be3e-654870ffb163" class="cta-button">Agende sua Sessão</a>
+            <a href="form.html" class="cta-button">Agende sua Sessão</a>
         </div>
     </section>
 
@@ -418,13 +418,13 @@
             <div class="galeria-grid">
                 <!-- Substitua os src abaixo pelas suas imagens -->
                 <div class="galeria-item">
-                    <img src="imagem7.jpg" alt="Ambiente relaxante com velas e óleos">
+                    <img src="549614398_17867250090446749_3385122234879456627_n.jpg" alt="Ambiente relaxante com velas e óleos">
                 </div>
                 <div class="galeria-item">
-                    <img src="imagem8.jpg" alt="Mesa de atendimento com cristais">
+                    <img src="527765955_17862218625446749_5376192582098438339_n.jpg" alt="Mesa de atendimento com cristais">
                 </div>
                 <div class="galeria-item">
-                    <img src="imagem9.jpg" alt="Ritual com água">
+                    <img src="550486665_17867565093446749_4469943290386357345_n.jpg" alt="Ritual com água">
                 </div>
             </div>
         </div>
@@ -512,7 +512,7 @@
             <h2>Pronto para Transformar seu Bem-Estar?</h2>
             <p>Preencha nossa anamnese e agende sua primeira sessão</p>
             <p style="font-size: 1.4em; margin-top: 20px;">✨ <strong>Condições especiais para novos clientes</strong></p>
-            <a href="https://n8n.mbam.com.br/form/d1c711c1-e978-49e4-be3e-654870ffb163" class="cta-button-secondary">Quero Agendar Minha Sessão</a>
+            <a href="form.html" class="cta-button-secondary">Quero Agendar Minha Sessão</a>
         </div>
     </section>
 
